--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,41 @@
-node_modules
-# Node.js
+# Node.js dependencies
 node_modules/
-dist/
-.build/
-.env
-.env.*  # Pour .env.local ou autres
-
-# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# IDEs
-.vscode/
-.idea/
-
-# OS files
-.DS_Store
-Thumbs.db
-
 # Build outputs
+dist/
+build/
 out/
 release/
 
-# Electron packaging
+# Environment files
+.env
+.env.*
+!.env.example  # Garde l'exemple si tu veux le partager
+
+# Logs
+*.log
+
+# IDE / Editor settings
+.vscode/
+.idea/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Electron
 *.asar
 
-# Others
+# Coverage reports
 coverage/
+
+# Next.js specific
+.next/
+.vercel/
+
+# Temporary files
+*.tmp
+*.temp
