--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "dev:renderer": "cd renderer && next dev",
     "dev:electron": "npm run build:electron && electron .",
     "build:electron": "tsc",
-    "build:renderer": "cd renderer && next build && next export -o renderer/out",
+    "build:renderer": "cd renderer && next build",
     "build": "npm run build:electron && npm run build:renderer",
     "start": "electron dist/index.js",
+    "start:prod": "concurrently \"cd renderer && node .next/standalone/server.js\" \"electron .\"",
     "dist": "electron-builder"
   },
   "build": {
@@ -22,8 +23,9 @@
       "buildResources": "electron/assets"
     },
     "files": [
-      "dist",
-      "renderer/out"
+      "dist/**/*",
+      "renderer/out/**/*",
+      "package.json"
     ],
     "win": {
       "icon": "electron/assets/icon-ico.ico"
@@ -49,6 +51,7 @@
     "next": "^15.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-select": "^5.10.1"
+    "react-select": "^5.10.1",
+    "webpack": "^5.101.3"
   }
 }
